--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -13,6 +13,8 @@
     <div id="page-facebook-card" class="page">
         <div class="content">
             <div class="content-block-title">Facebook卡片</div>
+            <a href="second.html">跳转页面</a>
+            <button id="test">测试事件</button>
             <div class="card facebook-card">
                 <div class="card-header no-border">
                     <div class="facebook-avatar"><img
@@ -51,6 +53,17 @@
     </div>
 
 </div>
+<script type="text/javascript">document.getElementById('test').onclick=function(){
+function nativeCall(){
+alert('原生调用了');
+}
+
+var command={
+'action':'test'
+};
+latte.event(JSON.stringify(command));
+};
+</script>
 <script src="assets/zepto.js"></script>
 <script src="dist/js/sm.js"></script>
 <script src="dist/js/sm-extend.js"></script>
